--- a/app/assets/styl/components/buttons.styl
+++ b/app/assets/styl/components/buttons.styl
@@ -1,25 +1,19 @@
-/*--------------------------------------------------------------------
-*
-* BUTTONS
-*
---------------------------------------------------------------------*/
-
 button
-  border: none
+  border none
 
 button, .button
-  display: inline-block
-  font-size: $font-base
-  text-align: center
-  cursor: pointer
-  -webkit-appearance: none
-  -webkit-user-select: none
-  -moz-user-select: none
-  -ms-user-select: none
-  user-select: none
+  display inline-block
+  font-size $font-base
+  text-align center
+  cursor pointer
+  -webkit-appearance none
+  -webkit-user-select none
+  -moz-user-select none
+  -ms-user-select none
+  user-select none
 
   &:disabled
-    cursor: not-allowed
+    cursor not-allowed
 
   &:focus
-    outline: none
+    outline none
