--- a/app/assets/styl/components/base.styl
+++ b/app/assets/styl/components/base.styl
@@ -1,66 +1,64 @@
-/*--------------------------------------------------------------------
 *
-* BASE
-*
---------------------------------------------------------------------*/
+  margin 0
+  padding 0
 
 *, *:after, *:before
-  -moz-box-sizing: border-box
-  -webkit-box-sizing: border-box
-  box-sizing: border-box
+  -moz-box-sizing border-box
+  -webkit-box-sizing border-box
+  box-sizing border-box
 
 html
-  font-size: 100%
+  font-size 100%
 
 body
-  font: $font-base/$line-height-base $font-serif
-  text-rendering: optimizeLegibility
-  -webkit-font-smoothing: antialiased
+  font $font-base/$line-height-base $font-serif
+  text-rendering optimizeLegibility
+  -webkit-font-smoothing antialiased
 
 h1, h2, h3, h4, h5, h6
-  font-weight: bold
+  font-weight bold
 
 h1, h2, h3
-  line-height: $line-height-tight
+  line-height $line-height-tight
 
 h1
-  font-size: $font-heading-one
+  font-size $font-heading-one
 
 h2
-  font-size: $font-heading-two
+  font-size $font-heading-two
 
 h3
-  font-size: $font-heading-three
+  font-size $font-heading-three
 
 h4
-  font-size: $font-heading-four
+  font-size $font-heading-four
 
 h5
-  font-size: $font-heading-five
+  font-size $font-heading-five
 
 h6
-  font-size: $font-heading-six
+  font-size $font-heading-six
 
 small
-  font-size: $font-small
+  font-size $font-small
 
 a
-  cursor: pointer
+  cursor pointer
 
 .cf
   &:before,
   &:after
-    content: " "
-    display: table
+    content " "
+    display table
 
   &:after
-    clear: both
+    clear both
 
 .pull-left
-  float: left
+  float left
 
 .pull-right
-  float: right
+  float right
 
 img, video, iframe
-  max-width: 100%
+  max-width 100%
