--- a/app/assets/styl/components/forms.styl
+++ b/app/assets/styl/components/forms.styl
@@ -1,48 +1,42 @@
-/*--------------------------------------------------------------------
-*
-* FORMS
-*
---------------------------------------------------------------------*/
-
 form
-  
+
   legend, fieldset
-    border: none
-  
+    border none
+
   legend
-    display: block
-    width: 100%
+    display block
+    width 100%
 
   fieldset
-    padding: 0
-    margin: 0
+    padding 0
+    margin 0
 
   label
-    display: block
+    display block
 
-  input[type=text], input[type=email], 
-  input[type=password], input[type=search], 
-  input[type=date], input[type=url], 
+  input[type=text], input[type=email],
+  input[type=password], input[type=search],
+  input[type=date], input[type=url],
   input[type=file], textarea
-    width: 100%
-    -webkit-appearance: none
-    font-size: $font-base
-    line-height: inherit
+    width 100%
+    -webkit-appearance none
+    font-size $font-base
+    line-height inherit
 
     &:focus
-      outline: none
+      outline none
 
-  input[type=text], input[type=email], 
-  input[type=password], input[type=search], 
-  input[type=date], input[type=url], 
-  input[type=file], textarea, select, 
+  input[type=text], input[type=email],
+  input[type=password], input[type=search],
+  input[type=date], input[type=url],
+  input[type=file], textarea, select,
   input[type=checkbox], input[type=radio]
 
     &:disabled
-      cursor: not-allowed
+      cursor not-allowed
 
   textarea
-    resize: none
+    resize none
 
   input[type=checkbox], input[type=radio]
-    display: inline-block
+    display inline-block
