--- a/app/assets/styl/components/lists.styl
+++ b/app/assets/styl/components/lists.styl
@@ -1,38 +1,32 @@
-/*--------------------------------------------------------------------
-*
-* LISTS
-*
---------------------------------------------------------------------*/
-
 ul, ol
-  margin: 20px 0 20px 30px
-  padding: 0
+  margin 20px 0 20px 30px
+  padding 0
 
   li ul
     li
-      list-style-type: circle 
+      list-style-type circle 
 
   li li ul
     li
-      list-style-type: square
+      list-style-type square
 
 ul
   li
-    list-style-type: disc
+    list-style-type disc
 
   &.unstyled
-    margin: 0
+    margin 0
 
     li
-      display: inline-block
-      list-style-type: none
+      display inline-block
+      list-style-type none
 
 ol
   li
-    list-style-type: decimal
+    list-style-type decimal
 
 dl
   dt
-    font-weight: bold
+    font-weight bold
   dd
-    margin: 0
+    margin 0
