--- a/app/assets/styl/index.styl
+++ b/app/assets/styl/index.styl
@@ -3,6 +3,7 @@
 @import 'globals/_mixins'
 
 //- Components
+@import 'components/reset'
 @import 'components/base'
 @import 'components/lists'
 @import 'components/buttons'
