--- a/app/assets/styl/components/base.styl
+++ b/app/assets/styl/components/base.styl
@@ -1,17 +1,13 @@
-*
-  margin 0
-  padding 0
-
 *, *:after, *:before
   -moz-box-sizing border-box
   -webkit-box-sizing border-box
   box-sizing border-box
 
 html
-  font-size 100%
+  font-size 62.5%
 
 body
-  font $font-base/$line-height-base $font-serif
+  font $font-base/$line-height-base $font-sans
   text-rendering optimizeLegibility
   -webkit-font-smoothing antialiased
 
