requirejs with jquery

--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -9,3 +9,7 @@ html(lang='en')
 
   //- SCRIPTS
   block scripts
+    script(
+      src='/assets/vendor/requirejs/require.js',
+      data-main='/assets/js/index.js'
+    )
