--- a/app/views/components/head.jade
+++ b/app/views/components/head.jade
@@ -1,10 +1,14 @@
 //- META
 meta(charset='utf-8')
 meta(name='viewport' content='initial-scale=1.0, maximum-scale=1.0')
+meta(name='keywords', content='impero, skeleton')
+meta(name='description', content='We are IMPERO')
+link(rel='shortcut icon', href='/public/src/img/favicon.ico', type='image/x-icon')
+link(rel='icon', href='/public/src/img/favicon.ico', type='image/x-icon')
 
 //- TITLE
 block title
   title Skeleton
 
 //- CSS
-link(rel='stylesheet', href='/assets/css/index.css')
+link(rel='stylesheet', href='/public/dist/index.css')
