--- a/app/views/pages/login.jade
+++ b/app/views/pages/login.jade
@@ -9,4 +9,5 @@ append body-start
     | Password
     input(type="text", name="password", id="password")
     br
+    input(type="hidden", name="_csrf", value="#{csrfToken}")
     input(type="submit", value="Login")
