--- a/app/views/pages/signup.jade
+++ b/app/views/pages/signup.jade
@@ -15,4 +15,5 @@ append body-start
     | Password
     input(type="password", name="password", id="password")
     br
+    input(type="hidden", name="_csrf", value="#{csrfToken}")
     input(type="submit", value="Sign Up")
