--- a/app/views/errors/404.jade
+++ b/app/views/errors/404.jade
@@ -1,6 +1,6 @@
-extends ../../layout
+extends ../layout
 
-append body-start
+block content
   h1= title
   p Mate, where is my page?
   a(href='/') Take me to the homepage!
