--- a/app/views/pages/login.jade
+++ b/app/views/pages/login.jade
@@ -1,13 +1,12 @@
-extend ../layout
+extends ../layout
 
-append body-start
-  h1 Login
-  form(name = "login", action = "/users/login", method = "post")
-    | Email
-    input(type="text", name="email", id="email")
-    br
-    | Password
-    input(type="text", name="password", id="password")
-    br
-    input(type="hidden", name="_csrf", value="#{csrfToken}")
-    input(type="submit", value="Login")
+block content
+	form(class='', action='/users/login', method='POST')
+		input(type='text', name='username' class='form-control', placeholder='Email',required, autofocus)
+		input(type='password', name='password' class='form-control', placeholder='Password', required)
+		input(type="hidden", name="_csrf", value="#{csrfToken}")
+		button(class='', type='submit') Sign in
+	a(href='/users/signup', class='') Create an account
+	br
+	if message
+		h1 #{message}
