--- a/app/views/pages/login.jade
+++ b/app/views/pages/login.jade
@@ -2,7 +2,7 @@ extends ../layout
 
 block content
 	form(class='', action='/users/login', method='POST')
-		input(type='text', name='username' class='form-control', placeholder='Email',required, autofocus)
+		input(type='text', name='email' class='form-control', placeholder='Email',required, autofocus)
 		input(type='password', name='password' class='form-control', placeholder='Password', required)
 		input(type="hidden", name="_csrf", value="#{csrfToken}")
 		button(class='', type='submit') Sign in
