--- a/app/views/pages/signup.jade
+++ b/app/views/pages/signup.jade
@@ -2,9 +2,8 @@ extends ../layout
 
 block content
 	form(class='', action='/users/signup', method='POST')
-		input(type='text', name='username', class='form-control', placeholder='Username',required, autofocus)
+		input(type='email', name='email', class='form-control', placeholder='Email',required,autofocus)
 		input(type='password', name='password', class='form-control nomargin', placeholder='Password', required)
-		input(type='email', name='email', class='form-control', placeholder='Email',required)
 		input(type='text', name='firstName', class='form-control', placeholder='First Name',required)
 		input(type='text', name='lastName', class='form-control', placeholder='Last Name',required)
 		input(type="hidden", name="_csrf", value="#{csrfToken}")
