--- a/app/views/components/head.jade
+++ b/app/views/components/head.jade
@@ -7,4 +7,4 @@ block title
   title Skeleton
 
 //- CSS
-link(rel='stylesheet', href='/assets/css/index.css')
+link(rel='stylesheet', href='/static/index.css')
