--- a/app/views/components/head.jade
+++ b/app/views/components/head.jade
@@ -1,10 +1,7 @@
-//- META
 meta(charset='utf-8')
 meta(name='viewport' content='initial-scale=1.0, maximum-scale=1.0')
 
-//- TITLE
 block title
   title Skeleton
 
-//- CSS
-link(rel='stylesheet', href='/static/index.css')
+link(rel='stylesheet', href='/static/dist/index.css')
