add sourdough as preprocessor and update io.js to node.js

--- a/app/static/src/styl/index.styl
+++ b/app/static/src/styl/index.styl
@@ -1,10 +1,4 @@
-//- Variables
-@import 'globals/_variables'
-@import 'globals/_mixins'
+@import 'sourdough-reset/index.styl'
 
-//- Components
-@import 'components/reset'
-@import 'components/base'
-@import 'components/lists'
-@import 'components/buttons'
-@import 'components/forms'
+//- Variables
+@import 'globals/variables.styl'
